# toupingzhushou

./: .gitattributes  .gitignore  README.md  gradle.properties  icon-preview.html  settings.gradle.kts  启动粥6y直播投屏助手.bat
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androidcast/: MainActivity.kt
app/src/main/java/com/example/androidcast/audio/: AudioStreamConfig.kt  ProjectionAudioStreamer.kt
app/src/main/java/com/example/androidcast/codec/: CapabilityProbe.kt  VideoEncoder.kt
app/src/main/java/com/example/androidcast/diagnostics/: SenderDiagnostics.kt
app/src/main/java/com/example/androidcast/model/: ControlMessage.kt  StreamProfile.kt
app/src/main/java/com/example/androidcast/network/: ControlClient.kt  PacketHeader.kt  UdpAudioSender.kt  UdpPacketizer.kt
app/src/main/java/com/example/androidcast/projection/: ProjectionForegroundService.kt  ProjectionSession.kt  ProjectionStatusBridge.kt
app/src/main/java/com/example/androidcast/settings/: StreamSettingsStore.kt
app/src/main/res/color/: switch_thumb_apple.xml  switch_track_apple.xml
app/src/main/res/drawable/: bg_badge_dark_pill.xml  bg_badge_pill.xml  bg_brand_panel.xml  bg_hero_panel.xml  bg_page_gradient.xml  bg_status_surface.xml  ic_brand_mark.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  strings_stream_settings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
docs/: android-sender.md  android-smoke-test.md  end-to-end-test.md  mvp-design.md  protocol.md  tech-stack.md  windows-receiver.md
icons/: README.md
pc-web-ui/: index.html  package-lock.json  package.json  vite.config.js
pc-web-ui/electron/: main.js  preload.js
pc-web-ui/src/: App.jsx  styles.css
tools/: create_z_logo.py  mock_receiver.py  run_receiver.ps1
tools/installer/: Build-WindowsReceiverInstaller.ps1  ChineseSimplified.isl  windows-receiver-installer.iss  直播投屏助手使用说明.txt.template  自动回复说明.txt
windows-receiver/: CMakeLists.txt
windows-receiver/include/: AirPlayReceiverController.h  AudioPlayer.h  ControlServer.h  DanmakuController.h  EmbeddedWebUiBridge.h  FrameReassembler.h  LocalMusicPlayer.h  NvidiaCuvidDecoder.h  NvidiaCuvidProbe.h  Protocol.h  UdpAudioReceiver.h  UdpVideoReceiver.h  VideoDecoder.h  VideoRenderer.h  VirtualCameraController.h  VirtualCameraFrameBridge.h  VirtualCameraShared.h  VoiceCommandController.h  VoiceIntentResolver.h  VoiceMusicLibrary.h
windows-receiver/resources/: receiver.rc
windows-receiver/src/: AirPlayReceiverController.cpp  AppMain.cpp  AudioPlayer.cpp  ControlServer.cpp  DanmakuController.cpp  EmbeddedWebUiBridge.cpp  FrameReassembler.cpp  LocalMusicPlayer.cpp  NvidiaCuvidDecoder.cpp  NvidiaCuvidProbe.cpp  Protocol.cpp  UdpAudioReceiver.cpp  UdpVideoReceiver.cpp  VideoDecoder.cpp  VideoRenderer.cpp  VirtualCameraController.cpp  VirtualCameraFrameBridge.cpp  VoiceCommandController.cpp  VoiceIntentResolver.cpp  VoiceMusicLibrary.cpp
windows-receiver/virtual-camera-media-source/: EventHandler.h  SimpleFrameGenerator.cpp  SimpleFrameGenerator.h  SimpleMediaSource.cpp  SimpleMediaSource.h  SimpleMediaStream.cpp  SimpleMediaStream.h  VirtualCameraMediaSource.h  VirtualCameraMediaSourceActivate.cpp  VirtualCameraMediaSourceActivate.h  pch.h  winrtCommon.cpp
windows-receiver/virtual-camera-tool/: VirtualCameraTool.cpp
成品/Windows接收端/: Windows接收端说明.txt
成品/Windows接收端/voice-model/sherpa-onnx-streaming-zipformer-zh-int8-2025-06-30/: encoder.int8.onnx  joiner.int8.onnx
成品/Windows接收端/web-ui/: index.html
成品/Windows接收端/web-ui/assets/: index-CmhXrKuJ.css  index-DMfM0tIm.js
成品/Windows接收端/弹幕自动回复/: 自动回复说明.txt
成品/Windows接收端/语音点歌/: 语音点歌说明.txt
成品/安卓发送端/: 安卓发送端说明.txt
